implemented taking photos functionality using webcamJS

--- a/css/style.css
+++ b/css/style.css
@@ -2386,6 +2386,10 @@ select {
   cursor: pointer;
 }
 
+.a-up {
+  color: gray;
+}
+
 .upload-btn-wrapper input[type=file] {
   font-size: 100px;
   position: absolute;
