--- a/css/style.css
+++ b/css/style.css
@@ -383,13 +383,16 @@ header {
 	width: 38px;
 	height: 100%;
 	border: 0;
+	transition: 0.2s;
+}
+.search-bar form button:hover {
+	background-color: #dedede;
 }
 .search-bar form button i {
 	color: #e44d3a;
 	font-size: 20px;
 	font-weight: bold;
 }
-
 nav {
 	float: left;
 	width: 60%;
