--- a/emojis/lib/css/emoji.css
+++ b/emojis/lib/css/emoji.css
@@ -228,6 +228,7 @@ img.emoji {
 }
 
 .emoji-menu .emoji-items a {
+	background-color:white !important;
     margin: -1px 0 0 -1px;
     padding: 5px;
     display: block;
