--- a/css/style.css
+++ b/css/style.css
@@ -859,6 +859,13 @@ main {
 }
 
 /* ============= Suggestions ============ */
+.sm-posts {
+	float: left;
+	width: 100%;
+	padding: 8px 0px 8px 0px;
+	position: relative;
+	display: grid;
+}
 
 .sd-title {
 	float: left;
