--- a/emojis/lib/css/emoji.css
+++ b/emojis/lib/css/emoji.css
@@ -95,7 +95,6 @@ img.emoji {
 
 
 
-/*
 .emoji-wysiwyg-editor {
     padding: 6px;
     padding-right: 35px;
@@ -103,8 +102,8 @@ img.emoji {
     min-height: 35px; 
     height: 30px;
     max-height: 284px;
-    overflow: auto;
-    line-height: 17px;
+    //overflow: auto;
+    //line-height: 17px;
     border: 1px solid #d2dbe3;
     border-radius: 2px;
     -webkit-box-shadow: none;
@@ -114,7 +113,7 @@ img.emoji {
     -webkit-user-select: text;
     word-wrap: break-word;
 }
-*/
+
 
 .emoji-wysiwyg-editor.parent-has-scroll {
      padding-right: 40px;
