save functionality fixes and UI changes
save-functionality implemented everywhere and UI changes

--- a/css/style.css
+++ b/css/style.css
@@ -33,6 +33,9 @@
 /* ================================================================================== 
 										Reset Css
 ===================================================================================== */
+button:focus {
+	outline-color: grey; /*try light or dark orange maybe*/
+}
 
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
