--- a/css/contact.css
+++ b/css/contact.css
@@ -7,7 +7,7 @@ input[type=text], input[type=email], select, textarea {
   resize: vertical; background-color: #f2f2f2
 }
 
-input[type=text]:hover, input[type=email]:hover, select:hover, textarea:hover {
+#contactForm input[type=text]:hover, input[type=email]:hover, select:hover, textarea:hover {
   border: 1px solid #2c3e50;
   box-shadow: 0 1px 2px 0 rgba(0,0,0,0.24),0 2px 4px 0 rgba(0,0,0,0.19);
 }
