--- a/css/style.css
+++ b/css/style.css
@@ -3784,16 +3784,27 @@ a:hover {
 	padding: 30px 0;
 	border-bottom: 1px solid #e5e5e5;
 }
-.company-up-info img {
-	float: none;
-	margin-bottom: 10px;
-	-webkit-border-radius: 100px;
-	-moz-border-radius: 100px;
-	-ms-border-radius: 100px;
-	-o-border-radius: 100px;
-	border-radius: 100px;
-	height: 90px;
-	object-fit: cover;
+@media only screen and (max-width: 559px) {
+	.company-up-info img {
+		float: none;
+		margin-bottom: 10px;
+		width: 100%;
+		height: 100%;
+		object-fit: cover;
+	}
+}
+@media only screen and (min-width: 560px) {
+	.company-up-info img {
+		float: none;
+		margin-bottom: 10px;
+		-webkit-border-radius: 100px;
+		-moz-border-radius: 100px;
+		-ms-border-radius: 100px;
+		-o-border-radius: 100px;
+		border-radius: 100px;
+		height: 100px;
+		object-fit: cover;
+	}
 }
 .company-up-info h3 {
 	color: #000000;
