--- a/css/style.css
+++ b/css/style.css
@@ -3828,6 +3828,28 @@ a:hover {
 	padding: 30px 0;
 	border-bottom: 1px solid #e5e5e5;
 }
+@media only screen and (min-width: 575.9px) {
+	.people-img{
+		min-width:90px;
+		max-height:120px;
+		border-radius: 100%;
+	}
+}
+.people-img{
+	background-color:white;
+	border:4px solid white;
+}
+.top {
+	border-radius: 25px 25px 0 0;
+	height: 70px;
+	width: 100%;
+	background-color: #2f3646;
+	margin-top:0;
+	padding-top:0;
+	top: -80px;
+	left: 0;
+
+}
 @media only screen and (max-width: 575.9px) {
 	.company-up-info img {
 		float: none;
